Add endpoint get token and add paginate for booking
